--- a/shiyuu_sub.ini
+++ b/shiyuu_sub.ini
@@ -31,6 +31,7 @@ ruleset=🐟 FINAL,[]FINAL
 ;设置分组标志位
 custom_proxy_group=📲 Telegram`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点
 custom_proxy_group=📹 YouTube`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点
+custom_proxy_group=🎥 Netflix`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点
 custom_proxy_group=📺 BiliBili`select`[]🎯 DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点
 custom_proxy_group=📺 Bahamut`select`[]🎯 DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点
 custom_proxy_group=🌍 GlobalMedia`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点
