--- a/shiyuu_sub.ini
+++ b/shiyuu_sub.ini
@@ -28,7 +28,7 @@ custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🇭🇰 香港节
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
 custom_proxy_group=📺 BiliBili`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点
-custom_proxy_group=📺 Bahamut`select`[]🇨🇳 台湾节点`[]DIRECT`[]🇭🇰 香港节点
+custom_proxy_group=📺 Bahamut`select`[]🇨🇳 台湾节点`[]🇭🇰 香港节点`[]DIRECT
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
 custom_proxy_group=📟 Google`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
 custom_proxy_group=Ⓜ️ Microsoft`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
