--- a/shiyuu_sub.ini
+++ b/shiyuu_sub.ini
@@ -17,6 +17,7 @@ ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=📺 BiliBili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
 ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
+ruleset=🤖 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=🏠 ChinaMax,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
 ruleset=🏠 ChinaMax,[]GEOIP,CN
 ruleset=🐟 FINAL,[]FINAL
@@ -34,6 +35,7 @@ custom_proxy_group=🌍 GlobalMedia`select`[]🚀 节点选择`[]🇭🇰 香港
 custom_proxy_group=📟 Google`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
 custom_proxy_group=Ⓜ️ Microsoft`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点
+custom_proxy_group=🤖 ChatGPT`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
 custom_proxy_group=🎮 Game`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点
 custom_proxy_group=🏠 ChinaMax`select`[]DIRECT
 custom_proxy_group=🛑 Advertising`select`[]REJECT
