--- a/private.yaml
+++ b/private.yaml
@@ -7,10 +7,10 @@ ipv6: true
 external-controller: 127.0.0.1:9090
 external-ui: dashboard
 
-geox-url:
-  geoip: "https://github.com/Loyalsoldier/v2ray-rules-dat/releases/latest/download/geoip.dat"
-  geosite: "https://github.com/Loyalsoldier/v2ray-rules-dat/releases/latest/download/geosite.dat"
-  mmdb: "https://github.com/Loyalsoldier/geoip/releases/latest/download/Country.mmdb"
+#geox-url:
+  #geoip: "https://github.com/Loyalsoldier/v2ray-rules-dat/releases/latest/download/geoip.dat"
+  #geosite: "https://github.com/Loyalsoldier/v2ray-rules-dat/releases/latest/download/geosite.dat"
+  #mmdb: "https://github.com/Loyalsoldier/geoip/releases/latest/download/Country.mmdb"
 
 profile:
   store-selected: true
