--- a/private.yaml
+++ b/private.yaml
@@ -3,7 +3,7 @@ allow-lan: true
 mode: rule
 geodata-mode: true
 log-level: info
-ipv6: true
+ipv6: false
 external-controller: 127.0.0.1:9090
 external-ui: dashboard
 
@@ -29,7 +29,7 @@ dns:
   enable: true
   listen: 0.0.0.0:1053
   fake-ip-range: 28.0.0.1/8
-  ipv6: true
+  ipv6: false
   enhanced-mode: fake-ip
   fake-ip-filter: 
   - '*'
