--- a/private.yaml
+++ b/private.yaml
@@ -1,7 +1,7 @@
 port: 7890
 allow-lan: true
 mode: rule
-geodata-mode: false
+#geodata-mode: false
 log-level: info
 ipv6: false
 external-controller: 127.0.0.1:9090
@@ -114,77 +114,77 @@ rule-providers:
     behavior: classical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml"
     path: ./ruleset/Telegram.yaml
-    interval: 604800
+    interval: 86400
 
   YouTube:
     type: http
     behavior: classical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml"
     path: ./ruleset/YouTube.yaml
-    interval: 604800
+    interval: 86400
 
   Netflix:
     type: http
     behavior: classical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.yaml"
     path: ./ruleset/Netflix.yaml
-    interval: 604800
+    interval: 86400
 
   BiliBili:
     type: http
     behavior: classical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml"
     path: ./ruleset/BiliBili.yaml
-    interval: 604800
+    interval: 86400
 
   Bahamut:
     type: http
     behavior: classical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.yaml"
     path: ./ruleset/Bahamut.yaml
-    interval: 604800
+    interval: 86400
 
   Google:
     type: http
     behavior: classical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.yaml"
     path: ./ruleset/Google.yaml
-    interval: 604800
+    interval: 86400
 
   Microsoft:
     type: http
     behavior: classical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.yaml"
     path: ./ruleset/Microsoft.yaml
-    interval: 604800
+    interval: 86400
 
   Steam:
     type: http
     behavior: classical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.yaml"
     path: ./ruleset/Steam.yaml
-    interval: 604800
+    interval: 86400
 
   OpenAI:
     type: http
     behavior: classical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.yaml"
     path: ./ruleset/OpenAI.yaml
-    interval: 604800
+    interval: 86400
 
   ChinaMax:
     type: http
     behavior: classical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax_Classical.yaml"
     path: ./ruleset/ChinaMax.yaml
-    interval: 604800
+    interval: 86400
 
   Lan:
     type: http
     behavior: classical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.yaml"
     path: ./ruleset/Lan.yaml
-    interval: 604800
+    interval: 86400
 
 
 
