--- a/shiyuu_sub.ini
+++ b/shiyuu_sub.ini
@@ -47,12 +47,12 @@ custom_proxy_group=🏠 ChinaMax`select`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 FINAL`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
 custom_proxy_group=🇭🇰 香港节点`select`(港|HK|Hong Kong)
-custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Taiwan)
-custom_proxy_group=🇸🇬 狮城节点`select`(新加坡|坡|狮城|SG|Singapore)
-custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
-custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
-custom_proxy_group=🇰🇷 韩国节点`select`(KR|Korea|KOR|首尔|韩|韓)
-custom_proxy_group=🚀 其他节点`select`^(?!.*?(港|HK|Hong Kong|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|新加坡|坡|狮城|SG|Singapore|台|新北|彰化|TW|Taiwan|KR|Korea|KOR|首尔|韩|韓)).*$
+custom_proxy_group=🇨🇳 台湾节点`select`(台湾|TW|Taiwan)
+custom_proxy_group=🇸🇬 狮城节点`select`(新加坡|狮城|SG|Singapore)
+custom_proxy_group=🇯🇵 日本节点`select`(日本|JP|Japan)
+custom_proxy_group=🇺🇲 美国节点`select`(美国|US|United States)
+custom_proxy_group=🇰🇷 韩国节点`select`(KR|Korea|韩国)
+custom_proxy_group=🚀 其他节点`select`^(?!.*?(港|HK|Hong Kong|日本|JP|Japan|美国|US|United States|新加坡|狮城|SG|Singapore|台湾|TW|Taiwan|KR|Korea|韩国)).*$
 
 enable_rule_generator=true
 overwrite_original_rules=true
