--- a/shiyuu_sub.ini
+++ b/shiyuu_sub.ini
@@ -7,9 +7,6 @@ ruleset=🏠 ChinaMax,https://raw.githubusercontent.com/blackmatrix7/ios_rule_sc
 ruleset=🏠 ChinaMax,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
 ruleset=🏠 ChinaMax,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
 ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
-ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
-ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
 ruleset=📟 Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
@@ -36,7 +33,7 @@ custom_proxy_group=📲 Telegram`select`[]🚀 Proxies`[]🇭🇰 香港节点`[
 custom_proxy_group=📹 YouTube`select`[]🚀 Proxies`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]🚀 Proxies`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
 custom_proxy_group=📺 BiliBili`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点
-custom_proxy_group=📺 Bahamut`select`[]🇨🇳 台湾节点`[]🇭🇰 香港节点`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=📺 Bahamut`select`[]🇨🇳 台湾节点`[]🇭🇰 香港节点
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 Proxies`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
 custom_proxy_group=📟 Google`select`[]🚀 Proxies`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
 custom_proxy_group=Ⓜ️ Microsoft`select`[]🚀 Proxies`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
