--- a/shiyuu_sub.ini
+++ b/shiyuu_sub.ini
@@ -49,7 +49,7 @@ custom_proxy_group=🇸🇬 狮城节点`select`(新加坡|狮城|SG|Singapore)
 custom_proxy_group=🇯🇵 日本节点`select`(日本|JP|Japan)
 custom_proxy_group=🇺🇲 美国节点`select`(美国|US|United States)
 custom_proxy_group=🇰🇷 韩国节点`select`(KR|Korea|韩国)
-custom_proxy_group=🚀 其他节点`select`^(?!.*?(港|HK|Hong Kong|日本|JP|Japan|美国|US|United States|新加坡|狮城|SG|Singapore|台湾|TW|Taiwan|KR|Korea|韩国)).*$
+custom_proxy_group=🚀 其他节点`select`^(?!.*(?:香港|HK|Hong Kong|日本|JP|Japan|美国|US|United States|新加坡|狮城|SG|Singapore|台湾|TW|Taiwan)).*
 
 enable_rule_generator=true
 overwrite_original_rules=true
