--- a/shiyuu_sub.ini
+++ b/shiyuu_sub.ini
@@ -21,7 +21,7 @@ ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=📺 BiliBili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
 ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
-ruleset=🤖 ChatGPT,https://raw.githubusercontent.com/Shiyuu2233/shiyuu_sub/master/OpenAI.yaml
+ruleset=🤖 ChatGPT,https://raw.githubusercontent.com/Shiyuu2233/shiyuu_sub/master/OpenAI.list
 ruleset=🏠 ChinaMax,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
 ruleset=🏠 ChinaMax,[]GEOIP,CN
 ruleset=🐟 FINAL,[]FINAL
