--- a/shiyuu_sub.ini
+++ b/shiyuu_sub.ini
@@ -20,7 +20,7 @@ ruleset=📹 YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=📺 BiliBili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
-ruleset=🤖 ChatGPT,https://raw.githubusercontent.com/Shiyuu2233/shiyuu_sub/master/Clash/OpenAI.list
+ruleset=🤖 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=🏠 ChinaMax,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
 ruleset=🏠 ChinaMax,[]GEOIP,CN
 ruleset=🐟 FINAL,[]FINAL
@@ -41,13 +41,13 @@ custom_proxy_group=🎮 Game`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 
 custom_proxy_group=🏠 ChinaMax`select`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 FINAL`select`[]🚀 Proxies`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
-custom_proxy_group=🇭🇰 香港节点`select`(港|HK|Hong Kong)
-custom_proxy_group=🇨🇳 台湾节点`select`(台湾|TW|Taiwan)
-custom_proxy_group=🇸🇬 狮城节点`select`(新加坡|狮城|SG|Singapore)
-custom_proxy_group=🇯🇵 日本节点`select`(日本|JP|Japan)
-custom_proxy_group=🇺🇲 美国节点`select`(美国|US|United States)
-custom_proxy_group=🇰🇷 韩国节点`select`(KR|Korea|韩国)
-custom_proxy_group=🚀 其他节点`select`^(?!.*(?:香港|HK|Hong Kong|日本|JP|Japan|美国|US|United States|新加坡|狮城|SG|Singapore|台湾|TW|Taiwan)).*
+custom_proxy_group=🇭🇰 香港节点`select`(港|Hong Kong)
+custom_proxy_group=🇨🇳 台湾节点`select`(台|TW|Taiwan)
+custom_proxy_group=🇸🇬 狮城节点`select`(坡|狮|Singapore)
+custom_proxy_group=🇯🇵 日本节点`select`(日|Japan)
+custom_proxy_group=🇺🇲 美国节点`select`(美|United States)
+custom_proxy_group=🇰🇷 韩国节点`select`(Korea|韩国)
+custom_proxy_group=🚀 其他节点`select`^(?!.*(?:香港|Hong Kong|日|Japan|美|United States|坡|狮|SG|Singapore|台|Taiwan)).*
 
 enable_rule_generator=true
 overwrite_original_rules=true
