--- a/shiyuu_sub.ini
+++ b/shiyuu_sub.ini
@@ -3,10 +3,10 @@
 
 
 ;设置规则标志位
-ruleset=🏠 ChinaMax,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
-ruleset=🏠 ChinaMax,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
-ruleset=🏠 ChinaMax,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
-ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=[]DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
+ruleset=[]DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
+ruleset=[]DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
+ruleset=[]REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=📟 Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
@@ -21,33 +21,29 @@ ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=📺 BiliBili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
 ruleset=🤖 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
-ruleset=🏠 ChinaMax,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
-ruleset=🏠 ChinaMax,[]GEOIP,CN
-ruleset=🐟 FINAL,[]FINAL
+ruleset=[]DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
+ruleset=[]DIRECT,[]GEOIP,CN
+ruleset=🚀 Proxy,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 Proxies`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
-custom_proxy_group=📲 Telegram`select`[]🚀 Proxies`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🚀 Proxies`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]🚀 Proxies`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
-custom_proxy_group=📺 BiliBili`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点
-custom_proxy_group=📺 Bahamut`select`[]🇨🇳 台湾节点`[]🇭🇰 香港节点
-custom_proxy_group=📟 Google`select`[]🚀 Proxies`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
-custom_proxy_group=Ⓜ️ Microsoft`select`[]🚀 Proxies`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点
-custom_proxy_group=🤖 ChatGPT`select`[]🚀 Proxies`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
-custom_proxy_group=🎮 Game`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点
-custom_proxy_group=🏠 ChinaMax`select`[]DIRECT
-custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 FINAL`select`[]🚀 Proxies`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 其他节点`[]DIRECT
+custom_proxy_group=🚀 Proxy`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]DIRECT
+custom_proxy_group=📲 Telegram`select`[]🚀 Proxy`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]DIRECT
+custom_proxy_group=📹 YouTube`select`[]🚀 Proxy`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]DIRECT
+custom_proxy_group=🎥 Netflix`select`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]DIRECT
+custom_proxy_group=📺 BiliBili`select`[]🇨🇳 台湾节点`[]DIRECT
+custom_proxy_group=📺 Bahamut`select`[]🇨🇳 台湾节点
+custom_proxy_group=📟 Google`select`[]🚀 Proxy`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点
+custom_proxy_group=Ⓜ️ Microsoft`select`[]🚀 Proxy`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]DIRECT
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点
+custom_proxy_group=🤖 ChatGPT`select`[]🇺🇲 美国节点
+custom_proxy_group=🎮 Game`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]DIRECT
 custom_proxy_group=🇭🇰 香港节点`select`(港|Hong Kong)
 custom_proxy_group=🇨🇳 台湾节点`select`(台|TW|Taiwan)
 custom_proxy_group=🇸🇬 狮城节点`select`(坡|狮|Singapore)
 custom_proxy_group=🇯🇵 日本节点`select`(日|Japan)
 custom_proxy_group=🇺🇲 美国节点`select`(美|United States)
-custom_proxy_group=🇰🇷 韩国节点`select`(Korea|韩国)
-custom_proxy_group=🚀 其他节点`select`^(?!.*(?:香港|Hong Kong|日|Japan|美|United States|坡|狮|SG|Singapore|台|Taiwan)).*
+custom_proxy_group=🚀 其他节点`select`^(?!.*(?:香港|Hong Kong|日|Japan|美|United States|坡|狮|Korea|韩国SG|Singapore|台|Taiwan)).*
 
 enable_rule_generator=true
 overwrite_original_rules=true
