--- a/shiyuu_sub.ini
+++ b/shiyuu_sub.ini
@@ -3,10 +3,10 @@
 
 
 ;设置规则标志位
-ruleset=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list,DIRECT
-ruleset=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list,DIRECT
-ruleset=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list,DIRECT
-ruleset=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list,DIRECT
+ruleset=🏠 China,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
+ruleset=🏠 China,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
+ruleset=🏠 China,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
+ruleset=🏠 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=📟 Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
@@ -22,7 +22,7 @@ ruleset=📺 BiliBili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_sc
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
 ruleset=🤖 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list,DIRECT
-ruleset=[]GEOIP,CN,DIRECT
+ruleset=🏠 China,[]GEOIP,CN
 ruleset=🚀 Proxy,[]FINAL
 ;设置规则标志位
 
@@ -38,6 +38,7 @@ custom_proxy_group=Ⓜ️ Microsoft`select`[]🚀 Proxy`[]🇭🇰 香港节点`
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点
 custom_proxy_group=🤖 ChatGPT`select`[]🇺🇲 美国节点
 custom_proxy_group=🎮 Game`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]DIRECT
+custom_proxy_group=🏠 China`[]DIRECT
 custom_proxy_group=🇭🇰 香港节点`select`(港|Hong Kong)
 custom_proxy_group=🇨🇳 台湾节点`select`(台|TW|Taiwan)
 custom_proxy_group=🇸🇬 狮城节点`select`(坡|狮|Singapore)
