--- a/shiyuu_sub.ini
+++ b/shiyuu_sub.ini
@@ -35,8 +35,8 @@ custom_proxy_group=📺 Bahamut`select`[]🇨🇳 台湾节点
 custom_proxy_group=📟 Google`select`[]🚀 Proxy`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点
 custom_proxy_group=Ⓜ️ Microsoft`select`[]🚀 Proxy`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]DIRECT
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点
-custom_proxy_group=🤖 ChatGPT`select`[]🇺🇲 美国节点
-custom_proxy_group=🎮 Game`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]DIRECT
+custom_proxy_group=🤖 ChatGPT`select`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
+custom_proxy_group=🎮 Game`select`[]🚀 Proxy`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]DIRECT
 custom_proxy_group=🏠 China`select`[]DIRECT
 custom_proxy_group=🇭🇰 香港节点`select`(港|Hong Kong)
 custom_proxy_group=🇨🇳 台湾节点`select`(台|TW|Taiwan)
