--- a/Sing-Box/config.json.example
+++ b/Sing-Box/config.json.example
@@ -2,15 +2,16 @@
 		"log": {
 				"disabled": false,
 				"level": "info",
-		//    "output": "box.log",
+		    		"output": "box.log",
 				"timestamp": true
 		},
 		"dns": {
 				"servers": [
 						{
-							"tag": "cloudflare",
+							"tag": "Cloudflare",
 							"address": "https://dns.cloudflare.com/dns-query",
 							"address_resolver": "CF",
+							"strategy": "prefer_ipv4",
 							"detour": "Proxy"
 						},
 						{
@@ -18,6 +19,12 @@
 							"address": "https://1.12.12.12/dns-query",
 							"detour": "Direct"
 						},
+						//{
+						//	"tag": "dns_direct",
+						//	"address": "dhcp://auto",
+						//	"strategy": "prefer_ipv6",
+						//	"detour": "Direct"
+						//},
 						{
 							"tag": "CF",
 							"address": "1.1.1.1"
@@ -59,7 +66,7 @@
 				"auto_route": true,
 				"strict_route": false,
 				"stack": "system",
-				"sniff": true
+				"sniff": false
 		}
 		],
 	"proxyproviders": [
@@ -348,8 +355,8 @@
 				},
 				"rules": [
 						{
-								//"port": 53,关闭Sniff使用
-								"protocol": "dns",开启Sniff使用
+								"port": 53,关闭Sniff使用
+								//"protocol": "dns",开启Sniff使用
 								"outbound": "Dns-out"
 						},        
 						{
