--- a/Sing-Box/config.json.example
+++ b/Sing-Box/config.json.example
@@ -378,7 +378,7 @@
 						{
 								"geosite": "youtube",
 								"geoip": "youtube",
-								"outbound": "Proxy"
+								"outbound": "YouTube"
 						},
 
 						{
