--- a/Sing-Box/config.json.example
+++ b/Sing-Box/config.json.example
@@ -54,7 +54,7 @@
 						"inet6_range": "fc00::/18"
 				},
 				"independent_cache": true,
-				"strategy": "ipv4_only"
+				//"strategy": "ipv4_only"
 		},
 		"inbounds": [
 		{
