--- a/Sing-Box/config.Windows-example.json
+++ b/Sing-Box/config.Windows-example.json
@@ -37,8 +37,7 @@
 				"rules": [
 						{
 							 "outbound": "any",
-							 "server": "dnspod",
-							 "disable_cache": true
+							 "server": "dnspod"
 						},
 						{
 							"query_type": [
